--- a/index.html
+++ b/index.html
@@ -82,8 +82,8 @@
 				<p class="lead">To accomplish our mission, we need your help</p>
 				<p class="lead">The impact of Show Some Skin depends on the input of people like you. The production of the show is not small feat, and we appreciate all the help we've received in the past.</p>
 				<p class="lead">For the 2014 show, we'll need your help again to make this show the best yet.</p>
-				<p class="lead">A critical part of the show are your anonymous submission. We'll also need actors to perform the monologues chosen. We'll need volunteers to help us with ticketing, marketing, outreach and much more. If you're interested in helping out, don't hesitate to contact the director of the show</p>
-				<p class="lead"><a href="mailto:echo1@nd.edu">Edith Cho</a></p>
+				<p class="lead">A critical part of the show are your anonymous submission. We'll also need actors to perform the monologues chosen. We'll need volunteers to help us with ticketing, marketing, outreach and much more. If you're interested in helping out, don't hesitate to contact the director of the show <a href="mailto:cschwab1@nd.edu">Clarissa Schwab</a></p>
+				
 		</div> <!-- end container -->
 	</section> <!-- end how can you help -->
     
