added time and location for 2014 as dr. lucero requested

--- a/index.html
+++ b/index.html
@@ -63,6 +63,17 @@
 		</div>
 	</div>
 	<hr class="divider">
+	<!-- performance -->
+	<section class="performance">
+		<div class="container">
+			<h1>Performance</h1>
+			<p class="lead">Show Some Skin: BE BOLD is scheduled on Thursday and Friday, February 27 and 28, 2014. Our performance is in the Decio Mainstage Theater at the Debartolo Performing Arts Center.</p>
+		</div>
+	</section>
+	
+	<!-- end mission statement -->
+	<hr class="container">
+
 	<!-- mission statement -->
 	<section class="mission">
 		<div class="container">
