--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 		</div>
 	</section>
 	
-	<!-- end mission statement -->
+	<!-- end performance -->
 	<hr class="container">
 
 	<!-- mission statement -->
