--- a/index.html
+++ b/index.html
@@ -39,8 +39,11 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
-            <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
+            <li class="active"><a href="index.html">Home</a></li>
+            <!--
+	    <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
+	    -->
+	    <li class=""><a href="videos.html">Videos</a></li>
            
 		<!--
             <li><a href="#about">About</a></li>
@@ -54,17 +57,18 @@
 	<div class="logo">
 		<div class="container">
 			<h1>SHOW SOME SKIN: BE BOLD</h1>
+			<br>
+			<h2><strong>SAVE THE DATE</strong></h2>
+			<h3><strong>Thursday, Feb 27, 2014</strong></h3>
+			<h3><strong>Friday, Feb 28, 2014</strong></h3>
 			
-			<h2>Help Us Tell Your Story: Submit Yours</h2>
-			<p><a class="btn btn-primary btn-lg" href="submit-monologue.html">Submit Your Monologue</a></p>
+			<h2><strong>DPAC</strong></h2>
 			
 		</div> <!-- end fluid container -->
 			
 		</div>
 	</div>
 	<hr class="divider">
-<<<<<<< HEAD
-=======
 	<!-- performance -->
 	<section class="performance">
 		<div class="container">
@@ -75,8 +79,6 @@
 	
 	<!-- end performance -->
 	<hr class="container">
-
->>>>>>> 7a677a7154938e438b9911b104ccdaee020f7d93
 	<!-- mission statement -->
 	<section class="mission">
 		<div class="container">
