added meta description

--- a/submit-monologue.html
+++ b/submit-monologue.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Show Some Skin at Notre Dame. Videos from 2012 show: It's Complicated. Show Some Skin ND is a show that gives voice to unspoken stories about identity & difference.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
