--- a/videos.html
+++ b/videos.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Show Some Skin at Notre Dame. Videos from 2012 show: It's Complicated. Show Some Skin ND is a show that gives voice to unspoken stories about identity & difference.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-    <title>Show Some Skin | Videos</title>
+    <title>Notre Dame Show Some Skin | Videos</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
