--- a/videos.html
+++ b/videos.html
@@ -54,9 +54,11 @@
     </div>
 		
 	  <div class="container">
-	    <h2><strong>2012 Performances</strong></h2>
-		<!-- video gallery begins -->
-		  <iframe class="video-thumbnail" width="853" height="480" src="http://www.youtube.com/embed/videoseries?list=PLGGPKN-sv7dDRzbr0LhToFCNyqJt9rbVu" frameborder="0" allowfullscreen></iframe>
+      <!-- video gallery begins -->
+	    <h2><strong>2013 Performances</strong></h2>
+      <iframe class="video-thumbnail" width="853" height="480" src="http://www.youtube.com/embed/s7LfrszHmTs?list=PLmX6000R-QWs5pp2oXTKa9exe_aDPfE7B" frameborder="0" allowfullscreen></iframe>
+      <h2><strong>2012 Performances</strong></h2>
+      <iframe class="video-thumbnail" width="853" height="480" src="http://www.youtube.com/embed/videoseries?list=PLGGPKN-sv7dDRzbr0LhToFCNyqJt9rbVu" frameborder="0" allowfullscreen></iframe>
 		<!-- video gallery ends -->
 		
 	    <h2><strong>Director’s Note from 2012: The Race Monologues</strong></h2>
