replace 2013 playlist with HD playlist

--- a/videos.html
+++ b/videos.html
@@ -56,7 +56,7 @@
 	  <div class="container">
       <!-- video gallery begins -->
 	    <h2><strong>2013 Performances</strong></h2>
-      <iframe class="video-thumbnail" width="853" height="480" src="http://www.youtube.com/embed/s7LfrszHmTs?list=PLmX6000R-QWs5pp2oXTKa9exe_aDPfE7B" frameborder="0" allowfullscreen></iframe>
+      <iframe class="video-thumbnail" width="853" height="480" src="http:////www.youtube.com/embed/videoseries?list=PLmX6000R-QWuACO1ijavRn6pNzfUuGFyE" frameborder="0" allowfullscreen></iframe>
       <h2><strong>2012 Performances</strong></h2>
       <iframe class="video-thumbnail" width="853" height="480" src="http://www.youtube.com/embed/videoseries?list=PLGGPKN-sv7dDRzbr0LhToFCNyqJt9rbVu" frameborder="0" allowfullscreen></iframe>
 		<!-- video gallery ends -->
