fixed css issues

--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
     <!-- Custom styles for this template -->
    <!-- <link href="show-some-skin.css" rel="stylesheet"> -->
     <link href="starter-template.css" rel="stylesheet">
+    <link href="show-some-skin.css" rel="stylesheet">
     <link href="full-size.css" rel="stylesheet">
     <link href='http://fonts.googleapis.com/css?family=Raleway' rel='stylesheet' type='text/css'>
 	<link href='http://fonts.googleapis.com/css?family=Oswald:400,700' rel='stylesheet' type='text/css'>
