added Facebook link

--- a/index.html
+++ b/index.html
@@ -58,10 +58,11 @@
 
 	<div class="logo">
 		<div class="container">
-			<h3><strong>FEBRUARY 27/28 at 7:00PM</strong></h3>
+			<h3><strong>February 27 / 28 at 7:00pm</strong></h3>
 			<h4><strong>DeBartolo Performing Arts Center — Decio Mainstage Theatre.</strong></h4>
-			<h4><strong>$3 tickets on sale at <a href ="http://performingarts.nd.edu/">performingarts.nd.edu</a> or call 574-631-2800.</strong></h4>
+			<h4><strong>$3 tickets on sale at <a href ="http://performingarts.nd.edu/calendar/view.aspx?id=4866">performingarts.nd.edu</a> or call (574) 631-2800.</strong></h4>
 			<h4><strong>All proceeds go towards community organizations empowering local residents through the arts.</strong></h4>
+      <h4><strong>Connect with us on our <a href="https://www.facebook.com/events/243721532476798/">Facebook event page</a></strong></h4>
 		</div> <!-- end fluid container -->		
 	</div>
 	
