--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
 	    <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
 	    -->
 	    <li class=""><a href="videos.html">Videos</a></li>
+	    <li class=""><a href="about.html">About Us</a></li>
            
 		<!--
             <li><a href="#about">About</a></li>
