--- a/videos.html
+++ b/videos.html
@@ -44,6 +44,7 @@
             <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
 	    -->
 	    <li class="active"><a href="#">Videos</a></li>
+	    <li class=""><a href="about.html">About Us</a></li>
 		<!--
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact Us</a></li>
