added sponsors page

--- a/videos.html
+++ b/videos.html
@@ -45,6 +45,7 @@
 	    -->
 	    <li class="active"><a href="#">Videos</a></li>
 	    <li class=""><a href="about.html">About Us</a></li>
+	    <li class=""><a href="sponsors.html">Sponsors</a></li>
 		<!--
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact Us</a></li>
