--- a/about.html
+++ b/about.html
@@ -44,7 +44,8 @@
 	    <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
 	    -->
 	    <li class=""><a href="videos.html">Videos</a></li>
-	    <li class="active"><a href="#">About</a></li>
+	    <li class="active"><a href="#">About Us</a></li>
+	    <li class=""><a href="sponsors.html">Sponsors</a></li>
            
 		<!--
             <li><a href="#about">About</a></li>
