--- a/sponsors.html
+++ b/sponsors.html
@@ -44,7 +44,7 @@
             <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
 	    -->
 	    <li class=""><a href="videos.html">Videos</a></li>
-	    <li class=""><a href="about.html">About Us</a></li>
+	    <li class=""><a href="about.html">About</a></li>
 	    <li class="active"><a href="#">Sponsors</a></li>
 	    
 		<!--
