Edited copy on sponsor page

--- a/sponsors.html
+++ b/sponsors.html
@@ -58,25 +58,25 @@
 		
 	  <div class="container">
 	  <h1>Sponsors</h1>
-			<p>This year's show would not be possible without the help of generous people from all over campus</p>
-			<p>We want to thank the following institutions for helping us:</p>
+			<p>This year's show would not be possible without the help of generous people from all over campus.</p>
+			<p>We want to thank the following sponsors for helping us:</p>
 			<ul>
-				<li>first year of studies</li>
-				<li>university writing program</li>
-				<li>department of film, television &amp; theater</li>
-				<li>college of science</li>
-				<li>international student &amp; scholar affairs</li>
+				<li>First Year of Studies</li>
+				<li>University Writing Program</li>
+				<li>Department of Film, Television &amp; Theater</li>
+				<li>College of Science</li>
+				<li>International Student &amp; Scholar Affairs</li>
 				<li>office of international studies</li>
-				<li>center for the study of languages and cultures</li>
-				<li>center for social concerns</li>
-				<li>institute for scholarship in the liberal arts</li>
-				<li>multicultural student programs and services</li>
-				<li>department of africana studies</li>
-				<li>department of anthropology</li>
-				<li>department of sociology</li>
-				<li>gender studies program</li>
-				<li>education, schooling &amp; society</li>
-				<li>gender relations center</li>
+				<li>Center for the Study of Languages and Cultures</li>
+				<li>Center for Social Concerns</li>
+				<li>Institute for Scholarship in the Liberal Arts</li>
+				<li>Multicultural Student Programs and Services</li>
+				<li>Department of Africana Studies</li>
+				<li>Department of Anthropology</li>
+				<li>Department of Sociology</li>
+				<li>Gender Studies Program</li>
+				<li>Education, Schooling &amp; Society</li>
+				<li>Gender Relations Center</li>
 			</ul>
 	  </div>
 	  
