Edited copy on sponsor page

--- a/sponsors.html
+++ b/sponsors.html
@@ -66,7 +66,7 @@
 				<li>Department of Film, Television &amp; Theater</li>
 				<li>College of Science</li>
 				<li>International Student &amp; Scholar Affairs</li>
-				<li>office of international studies</li>
+				<li>Office of International Studies</li>
 				<li>Center for the Study of Languages and Cultures</li>
 				<li>Center for Social Concerns</li>
 				<li>Institute for Scholarship in the Liberal Arts</li>
