Edited copy on sponsor page

--- a/sponsors.html
+++ b/sponsors.html
@@ -77,6 +77,7 @@
 				<li>Gender Studies Program</li>
 				<li>Education, Schooling &amp; Society</li>
 				<li>Gender Relations Center</li>
+				<li>Asian Pacific Alumni of Notre Dame</li>
 			</ul>
 	  </div>
 	  
