added google analytics

--- a/sponsors.html
+++ b/sponsors.html
@@ -98,5 +98,8 @@
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
 	<script src="js/bootstrap-lightbox.min.js"></script>
+
+	<!-- Google Tracking -->
+    <script src="js/tracking.js"></script>
   </body>
 </html>
