--- a/sponsors.html
+++ b/sponsors.html
@@ -78,6 +78,7 @@
 				<li>Education, Schooling &amp; Society</li>
 				<li>Gender Relations Center</li>
 				<li>Asian Pacific Alumni of Notre Dame</li>
+				<li>Notre Dame Alumni Diversity Council</li>
 			</ul>
 	  </div>
 	  
