--- a/videos.html
+++ b/videos.html
@@ -59,6 +59,11 @@
       <!-- video gallery begins -->
 	    <h2><strong>2013 Performances</strong></h2>
       <iframe class="video-thumbnail" width="853" height="480" src="http:////www.youtube.com/embed/videoseries?list=PLmX6000R-QWuACO1ijavRn6pNzfUuGFyE" frameborder="0" allowfullscreen></iframe>
+      <h2><strong>Director’s Note from 2013: It's Complicated</strong></h2>
+      <p>Anonymity in the virtual space comes with no responsibility attached to it. One may comment or now even submit anonymous secrets without any consequences beyond the screen. Anonymity in Show Some Skin contrasts to this. The process of Show Some Skin requires an underlying level of courage for the writers to submit their monologues due to the fact that these stories become the center of discourse for the production. The anonymous writers behind the stories have a spectrum of attitudes and understanding—stories are not neatly packaged. Each year, the anonymous writers push the boundaries of the production further. They show us the unexplored paths for our production.</p>
+      <p>After last year’s production, many audience members were confused that the actors on stage were not the writers of the monologues. The actors are leaders who come from various niches of our Notre Dame community. They stepped up to fill in the shoes of the anonymous writers. Rehearsals center on pushing ourselves to consider all possible interpretations and to build up characters with complex dimensions. We will never know what the authors truly wanted to convey. The actors now stand on stage in front of you, despite their own fears and disagreements and sometimes personal hesitations about the monologues. Much sleep was lost on our attempt at representing the people behind anonymity.</p>
+	  <p>We hope the production to be an ever evolving group that questions the dominant narrative at any given moment in time. Wherever this takes us, we hope to open up the discourse to be inclusive of the marginal voices. -E. Cho</p>
+      
       <h2><strong>2012 Performances</strong></h2>
       <iframe class="video-thumbnail" width="853" height="480" src="http://www.youtube.com/embed/videoseries?list=PLGGPKN-sv7dDRzbr0LhToFCNyqJt9rbVu" frameborder="0" allowfullscreen></iframe>
 		<!-- video gallery ends -->
