--- a/about.html
+++ b/about.html
@@ -39,7 +39,8 @@
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class="active"><a href="#">Home</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="#">About</a></li>
             <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
            
 		<!--
@@ -51,18 +52,6 @@
       </div>
     </div>
 
-	<div class="logo">
-		<div class="container">
-			<h1>SHOW SOME SKIN: BE BOLD</h1>
-			
-			<h2>Help Us Tell Your Story: Submit Yours</h2>
-			<p><a class="btn btn-primary btn-lg" href="submit-monologue.html">Submit Your Monologue</a></p>
-			
-		</div> <!-- end fluid container -->
-			
-		</div>
-	</div>
-	<hr class="divider">
 	<!-- performance -->
 	<section class="performance">
 		<div class="container">
