--- a/submit-monologue.html
+++ b/submit-monologue.html
@@ -40,6 +40,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li class="active"><a href="#submit">Submit Your Monologue</a></li>
            
            <!--
@@ -54,7 +55,7 @@
 	<!-- insert embed code here -->
 	
 	<center>
-	<iframe src="https://docs.google.com/forms/d/1Vu79uQrU6DJS_ITTPnMmE8tbVHovWVpOshZQdDKZbCo/viewform?embedded=true" width="760" height="986" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
+	<iframe src="https://docs.google.com/forms/d/1cvCwSFZCGqA6GaOZN7CjuncwXU80ttj1N_TIDB_ylmY/viewform?embed=true" width="760" height="986" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</center>
 
 
