--- a/about.html
+++ b/about.html
@@ -3,11 +3,11 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Show Some Skin at Notre Dame. Show Some Skin ND is a show that gives voice to unspoken stories about identity & difference.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
-    <title>Show Some Skin | About</title>
+    <title>Show Some Skin | Home</title>
 
     <!-- Bootstrap core CSS -->
     <link href="css/bootstrap.css" rel="stylesheet">
@@ -35,18 +35,14 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="index.html">Show Some Skin</a>
+          <a class="navbar-brand" href="#">Show Some Skin</a>
         </div>
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
-            <li class=""><a href="index.html">Home</a></li>
-            <!--
-	    <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
-	    -->
-	    <li class=""><a href="videos.html">Videos</a></li>
-	    <li class="active"><a href="#">About</a></li>
-	    
-	    <li class=""><a href="sponsors.html">Sponsors</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li class="active"><a href="#">About</a></li>
+            <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
+           
 		<!--
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact Us</a></li>
@@ -56,7 +52,17 @@
       </div>
     </div>
 
+	<!-- performance -->
+	<section class="performance">
+		<div class="container">
+			<h1>Performance</h1>
+			<p class="lead">Show Some Skin: BE BOLD is scheduled on Thursday and Friday, February 27 and 28, 2014. Our performance is in the Decio Mainstage Theater at the Debartolo Performing Arts Center.</p>
+		</div>
+	</section>
+	
+	<!-- end performance -->
 	<hr class="container">
+
 	<!-- mission statement -->
 	<section class="mission">
 		<div class="container">
@@ -66,7 +72,7 @@
 	</section>
 	
 	<!-- end mission statement -->
-
+	<hr class="container">
 	<!-- Start of site copy -->
 	
 	<!-- How can you help -->
@@ -112,8 +118,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Google Tracking -->
-    <script src="js/tracking.js"></script>
   </body>
 </html>
