--- a/submit-monologue.html
+++ b/submit-monologue.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="">
+    <meta name="description" content="Show Some Skin at Notre Dame. Videos from 2012 show: It's Complicated. Show Some Skin ND is a show that gives voice to unspoken stories about identity & difference.">
     <meta name="author" content="">
     <link rel="shortcut icon" href="../../assets/ico/favicon.png">
 
@@ -40,6 +40,7 @@
         <div class="collapse navbar-collapse">
           <ul class="nav navbar-nav">
             <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li class="active"><a href="#submit">Submit Your Monologue</a></li>
            
            <!--
@@ -54,7 +55,7 @@
 	<!-- insert embed code here -->
 	
 	<center>
-	<iframe src="https://docs.google.com/forms/d/1Vu79uQrU6DJS_ITTPnMmE8tbVHovWVpOshZQdDKZbCo/viewform?embedded=true" width="760" height="1018" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe><!-- -->
+	<iframe src="https://docs.google.com/forms/d/1cvCwSFZCGqA6GaOZN7CjuncwXU80ttj1N_TIDB_ylmY/viewform?embed=true" width="760" height="986" frameborder="0" marginheight="0" marginwidth="0">Loading...</iframe>
 	</center>
 
 
@@ -73,8 +74,5 @@
     <!-- Placed at the end of the document so the pages load faster -->
     <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
     <script src="js/bootstrap.min.js"></script>
-
-    <!-- Google Tracking -->
-    <script src="js/tracking.js"></script>
   </body>
 </html>
