looped in videos page

--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
             <li class="active"><a href="#">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
+            <li><a href="videos.html">Videos</a></li>
            
 		<!--
             <li><a href="#about">About</a></li>
