--- a/about.html
+++ b/about.html
@@ -42,6 +42,7 @@
             <li><a href="index.html">Home</a></li>
             <li class="active"><a href="#">About</a></li>
             <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
+            <li><a href="videos.html">Videos</a></li>
            
 		<!--
             <li><a href="#about">About</a></li>
@@ -53,15 +54,15 @@
     </div>
 
 	<!-- performance -->
-	<section class="performance">
+	<!-- <section class="performance">
 		<div class="container">
 			<h1>Performance</h1>
 			<p class="lead">Show Some Skin: BE BOLD is scheduled on Thursday and Friday, February 27 and 28, 2014. Our performance is in the Decio Mainstage Theater at the Debartolo Performing Arts Center.</p>
 		</div>
-	</section>
+	</section> -->
 	
 	<!-- end performance -->
-	<hr class="container">
+	<!-- <hr class="container"> -->
 
 	<!-- mission statement -->
 	<section class="mission">
