--- a/submit-monologue.html
+++ b/submit-monologue.html
@@ -42,6 +42,7 @@
             <li><a href="index.html">Home</a></li>
             <li><a href="about.html">About</a></li>
             <li class="active"><a href="#submit">Submit Your Monologue</a></li>
+            <li><a href="videos.html">Videos</a></li>
            
            <!--
             <li><a href="#about">About</a></li>
