--- a/videos.html
+++ b/videos.html
@@ -38,10 +38,10 @@
           <a class="navbar-brand" href="#">Show Some Skin</a>
         </div>
         <div class="collapse navbar-collapse">
-          <ul class="nav navbar-nav">
-            <li><a href="#">Home</a></li>
+          <li><a href="index.html">Home</a></li>
+            <li><a href="about.html">About</a></li>
             <li><a href="submit-monologue.html">Submit Your Monologue</a></li>
-			<li class="active"><a href="#">Videos</a></li>
+            <li class="active"><a href="#">Videos</a></li>
 		<!--
             <li><a href="#about">About</a></li>
             <li><a href="#contact">Contact Us</a></li>
